# MoBI-View

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MoBI_View.html  README.md  SECURITY.md  index.html  pyproject.toml  search.js
.github/actions/setup-qt-env/: action.yaml
.github/actions/setup-venv/: action.yaml
.github/workflows/: docs.yaml  pypi.yaml  test.yaml
MoBI_View/: core.html  main.html  presenters.html  views.html
MoBI_View/core/: config.html  data_inlet.html  exceptions.html
MoBI_View/presenters/: main_app_presenter.html
MoBI_View/views/: eeg_plot_widget.html  interfaces.html  main_app_view.html  numeric_plot_widget.html
src/GUI/: config.py  data_inlet.py  main.py  utils.py  window.py
src/MoBI_GUI/: config.py  data_inlet.py  exceptions.py  main.py
src/MoBI_GUI/presenters/: __init__.py  main_app_presenter.py
src/MoBI_GUI/views/: __init__.py  interfaces.py
src/MoBI_View/: __init__.py  config.py  data_inlet.py  exceptions.py  main.py
src/MoBI_View/core/: config.py  data_inlet.py  discovery.py
src/MoBI_View/presenters/: __init__.py  main_app_presenter.py
src/MoBI_View/views/: __init__.py  eeg_plot_widget.py  main_app_view.py  numeric_plot_widget.py
src/MoBI_View/web/: server.py  stream_buffers.py  web_main.py
src/MoBI_View/web/static/: README_COLORS.md  colors.js  index.html  index.html.backup
tests/: test_data_inlet.py  test_eeg_plot_widget.py  test_fibonacci.py  test_main_app_presenter.py  test_main_app_view.py  test_numeric_plot_widget.py  test_plot_widgets.py
tests/smoke/: test_main.py  test_mobi_view_smoke.py  test_websocket_errors.py
tests/unit/: test_data_inlet.py  test_discovery.py  test_main.py  test_main_app_presenter.py  test_main_entry.py  test_stream_buffers.py  test_web_main.py  test_web_server.py
