[tool.poetry]
name = "MoBI_GUI"
version = "0.1.0"
description = "This application visualizes live LSL streams for MoBI data collection"
authors = ["kimit0310 <iktae.kim@childmind.org>"]
license = "GNU Lesser General Public License v2.1"
readme = "README.md"
packages = [{include = "MoBI_GUI", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pyqtgraph = "^0.13.7"
pyqt5 = "^5.15.11"
pylsl = {git = "https://github.com/labstreaminglayer/pylsl.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"
pytest-mock = "^3.10.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
