[tool.poetry]
name = "MoBI_View"
version = "0.1.0"
description = "A real-time biosignal visualization tool for Lab Streaming Layer (LSL) streams."
authors = ["Iktae Kim <iktae.kim@childmind.org>"]
license = "GNU Lesser General Public License v2.1"
readme = "README.md"
packages = [{include = "MoBI_View", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyqtgraph = "^0.13.7"
PyQt6 = "^6.9.0"
pylsl = "^1.17.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.1.1"
ruff = "^0.11.7"
pytest-mock = "^3.10.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.3"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[tool.poetry.scripts]
mobi-view = "MoBI_View.main:main"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
